# machine_learning

./: .gitignore  README.md  READMEv2.md  requirements.txt  深度学习术语.md
00-docs/: Pycharm连接远程服务器并实现远程调试.md  Python包的构建与发布.md  其他技巧.md  学习率.md
00-tools/: __init__.py  encoder.py  gen_markdown_toc.py  metrics.py  requirements.txt
ch05_decision_trees/: cart_reg_tree.py  decision_tree_origin.py
ch08_boosting/: gbdt.py
common/: sampling.py
deep-learning/: 00-矩阵微分.md  README.md
deep_learning/: 00-矩阵微分.md  README.md  activation.py
factorization_machines/: fm.py  tests.py
matrix_factorization/: README.md  bias_svd.py  funk_svd.py  svd.py  svdpp.py  tests.py
natural-language-processing/: README.md
tools/: dataset.py
torch-learning/: PythonPacking.md  ch04_PyTorch数据模块_实践.ipynb  ch05_PyTorch模型和优化器.md  ch06_模型部署.md  ch07_其他技巧.md
torch_learning/: PyTorch_张量操作.ipynb  README.md  __init__.py  ch01_PyTorch简介与环境配置.md  ch02_PyTorch核心模块.ipynb  ch02_PyTorch核心模块.md  ch02_PyTorch核心模块_实践.ipynb  ch02_PyTorch核心模块和数据结构.md  ch02_PyTorch核心模块和数据结构_实践.ipynb  ch03_PyTorch数据模块.md  ch03_PyTorch数据模块_实践.ipynb  ch03_PyTorch自动微分.md  ch03_PyTorch自动微分_实践.ipynb  ch04_PyTorch模型模块.md  ch05_PyTorch优化模块.md  pyproject.toml
torch_learning/images/: Dataset和DataLoader关系.eddx
torch_learning/src/torchlibrary/: example.py
torch_learning/src/torchlibrary/examples/: __init__.py
trees/: loss.py  random_forest.py  tree.py  xgboost.py
utility/: animation_sin.py
第2章 感知器模型(Perceptron)/: perceptron1.py  perceptron2.py
第4章 朴素贝叶斯(NaiveBayes)/: naive_bayes.py
第5章 决策树(DecisonTree)/: tmp.py  trees.py
(+129 files in other folders)
