[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlibrary"
version = "0.0.1"
description = "torchlibrary"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.0",
    "torch>=0.19.0",
    "torch>=2.4.0",
    "jupyter>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/bodeby/torchstack"
Issues = "https://github.com/bodeby/torchstack/issues"
Documentation = "https://bodeby.github.io/torchstack/"
