[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlibrary"
version = "0.0.0"
authors = [
  { name="zhengchubin", email="530154436@qq.com" },
]
description = "torchlibrary"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "torchaudio>=2.4.0",
    "jupyter>=1.1.1",
]

[project.urls]
Homepage = "https://github.com/530154436/machine_learning/tree/master/torch_learning"
Issues = "https://github.com/530154436/machine_learning/issues"
